--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<link type='text/css' rel="stylesheet" href="style.css">
+
+<head>
+  <link type='text/css' rel="stylesheet" href="style.css">
+</head>
 
 <body>
   <iframe src="lib/hello.html" width="200" height="200" />
